    - Raw gem recipes unlocked by Geode crystallization 1
    - Alien artifact recipes unlocked by Alien bio processing 3
    - Reshuffled early game smelting technologies and recipe unlocks
    - Disabled recipes Silicon > Glass and Silver ore > Silver plate
    - Removed recipe Carbon > Carbon Dioxide
    - Moved garden duplication recipes to Alien farming
    - Moved Small storage tanks to Fluid control
    - Removed empty technologies
  Bugfixes:
    - Fixed crash in tutorial when SCT was not enabled
    - Cellulose Pulp was not usable as intermediate when hand crafting
    - Fixed Total raw tooltip for Basic circuit board
    - Fixed Electric engine tech did not require Engine
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 23.12.2020
  Bugfixes:
    - Fixed crash on startup when PickerAtheneum was enabled
    - Default landfill type changed from base game Landfill to Sand
    - Fixed Basic circuit board tech icon issue with graphics reskin mods
    - Reverted merge of A Sea Block Config
  Changes:
    - Cleared fuel value from disabled fuels
    - Added compatibility for Transport Drones mod
    - Angel's Petrochemical Processing setting Enable converter valve and conversion recipes defaults to false
    - Tutoral techs reworked
    - Hydro plant and Clarifier removed from tutorial
    - Hydro plant and Clarifier recipes reverted to default
    - Brown algae processing moved later in the tech tree
    - Lithia salt and Sodium carbonate moved to brown algae processing
    - Bob's Tech setting Science Pack colors update default value set to false. Currently only applies if SCT is disabled
    - Startup techs ignore tech cost multiplier
    - Hid Electric mining drill and pumpjack
    - Hid Mining Productivity techs (unless Seablock Mining mod is enabled)
    - Added Slag Processing 1 as a prerequisite for Logistics (if Bob's logistics setting Transport belt overhaul is enabled)